--- a/TODO
+++ b/TODO
@@ -2,10 +2,27 @@ TODO
 
 # Improvements
 
+• TODO: Renommer /graphics/characters en /graphics/spaceship et /graphics/bullets en /graphics/bullet
 • TODO: Transformer /engine en lib pour éviter de recompiler 2 fois tous les fichiers
 • TODO: Remplacer tinyxml2 par Qt et virer le dossier /cmake
 • TODO: Virer la dépendance à la SFML pour le serveur
    → Mettre la partie affichage dans une bibliothèque séparée inclue uniquement dans le client
+• TODO: Mettre le jeu dans une bibliothèque séparée (càd les Factory/Movement/Behaviour)
+
+# Review
+
+• TODO: Mettre en avant les features de l’engine
+   → Framerate independent
+   → Fichiers XML qui permettent de modifier le jeu sans avoir à recompiler
+   → Chaque texture n’est chargée qu’une fois en mémoire
+   → Engine modulaire (3 parties, le cœur, la partie graphique et le jeu en lui-même)
+   → Système d’entités à composants
+   → Gestion dynamique des monstres (chaque client peut rajouter/enlever des monstres sur sa game)
+
+• TODO: Mettre en avant les features réseau
+   → Système de lobby
+   → Tchat (ça serait ouf)
+   → Utilisation de TCP pour la connexion et de UDP pour le jeu en lui-même
 
 # Documentation
 
@@ -24,9 +41,10 @@ TODO
       ◦ TODO: Handle client crash
       ◦ TODO: Handle up to 4 players
 • TODO: Player spaceship implementation (blue, red, yellow, green)
-   ◦ TODO: Add movement
+   ◦ TODO: Handle movement animation
    ◦ TODO: Add the ability to shoot
    ◦ TODO: Handle collisions with screen borders
+   ◦ TODO: Add network-based movement
 • TODO: Enemy implementation
    ◦ TODO: Add a dynamic library loader for enemy factories/movement/behaviours
    ◦ TODO: Add a menu to add libs in runtime
@@ -34,7 +52,7 @@ TODO
    ◦ TODO: Add the ability to shoot
    ◦ TODO: Handle collisions with ally bullets (same for allies but for enemy bullets)
    ◦ TODO: Handle random spawn on the right of the screen
-   ◦ TODO: Add notification for each client when a mob spawns, is killed, shoots, kills a player...
+   ◦ TODO: Send notification to each client when a mob spawns, is killed, shoots, kills a player...
 • TODO: Background
    ◦ TODO: Slow horizontal scrolling background
 • TODO: GUI → Dylan
