--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@ TODO
 • TODO: Remplacer tinyxml2 par Qt et virer le dossier /cmake
 • TODO: Virer la dépendance à la SFML pour le serveur
    → Mettre la partie affichage dans une bibliothèque séparée inclue uniquement dans le client
+   → Il sera probablement nécessaire de remplacer `sf::Vector2<T>` par ma classe `Vector2<T>`
 • TODO: Mettre le jeu dans une bibliothèque séparée (càd les Factory/Movement/Behaviour)
 
 # Fixme
@@ -28,7 +29,7 @@ TODO
 
 • TODO: Mettre en avant les features réseau
    → Système de lobby
-   → Tchat (ça serait ouf)
+   → Tchat + commandes serveur (ça serait ouf)
    → Utilisation de TCP pour la connexion et de UDP pour le jeu en lui-même
 
 # Documentation
