--- a/TODO
+++ b/TODO
@@ -9,6 +9,7 @@ TODO
    → Mettre la partie affichage dans une bibliothèque séparée inclue uniquement dans le client
    → Il sera probablement nécessaire de remplacer `sf::Vector2<T>` par ma classe `Vector2<T>`
 • TODO: Mettre le jeu dans une bibliothèque séparée (càd les Factory/Movement/Behaviour)
+• TODO: Le réseau n’a rien à faire dans le `MovementSystem`, le déplacer vers un autre système
 
 # Fixme
 
