[GameServer] Network lag fixed.

--- a/TODO
+++ b/TODO
@@ -3,20 +3,22 @@ TODO
 # Improvements
 
 • DONE: Transformer /engine en lib pour éviter de recompiler 2 fois tous les fichiers
+• DONE: Le réseau n’a rien à faire dans le `MovementSystem`, le déplacer vers un autre système
 • TODO: Renommer /graphics/characters en /graphics/spaceship et /graphics/bullets en /graphics/bullet
+• TODO: Virer `Application`
 • TODO: Remplacer tinyxml2 par Qt et virer le dossier /cmake
 • TODO: Virer la dépendance à la SFML pour le serveur
    → Mettre la partie affichage dans une bibliothèque séparée inclue uniquement dans le client
    → Il sera probablement nécessaire de remplacer `sf::Vector2<T>` par ma classe `Vector2<T>`
 • TODO: Mettre le jeu dans une bibliothèque séparée (càd les Factory/Movement/Behaviour)
-• TODO: Le réseau n’a rien à faire dans le `MovementSystem`, le déplacer vers un autre système
-• TODO: Virer `Application`
 
 # Fixme
 
 • DONE: Enemy bullets disappear when enemy is killed
    → Potential solution: Add subentities to Scene if the entity dies
    → Alternative solution: Wait subentities are dead before killing main entity
+• DONE: Bullets appear on the top-left corner before being shooted, why?
+• TODO: During network lag spikes, entities are not correctly deleted/spawned
 • TODO: Faster bullets when spamming shoot button instead of holding it, wtf?
 
 # Review
@@ -43,12 +45,9 @@ TODO
 # Game
 
 • TODO: Network
-   ◦ TODO: Client
-      ◦ TODO: `Server` class and `Packet` struct
    ◦ TODO: Server
-      ◦ TODO: `Client` and `Server` classes
       ◦ TODO: Handle multiple games at the same time (lobby system)
-      ◦ TODO: Handle client crash
+      ◦ TODO: Handle client crash (timeout)
       ◦ TODO: Handle up to 4 players
 • WIP: Player spaceship implementation (blue, red, yellow, green)
    ◦ DONE: Add the ability to shoot
@@ -59,14 +58,14 @@ TODO
 • WIP: Enemy implementation
    ◦ DONE: Add movement
    ◦ DONE: Add the ability to shoot
+   ◦ DONE: Send notification to each client when a mob spawns, is killed, shoots, kills a player...
+   ◦ DONE: Handle random spawn on the right of the screen
+   ◦ TODO: Handle collisions with ally bullets (same for allies but for enemy bullets)
    ◦ TODO: Add a dynamic library loader for enemy factories/movement/behaviours
    ◦ TODO: Add a menu to add libs in runtime
-   ◦ TODO: Handle collisions with ally bullets (same for allies but for enemy bullets)
-   ◦ TODO: Handle random spawn on the right of the screen
-   ◦ TODO: Send notification to each client when a mob spawns, is killed, shoots, kills a player...
    ◦ TODO: Die animation
-• TODO: Background
-   ◦ TODO: Slow horizontal scrolling background
+• DONE: Background
+   ◦ DONE: Slow horizontal scrolling background
 • WIP: GUI → Dylan
    ◦ DONE: Button class
    ◦ DONE: Title screen
