[Network] Now uses TCP for important communication.

--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@ TODO
 • TODO: Renommer /graphics/characters en /graphics/spaceship et /graphics/bullets en /graphics/bullet
 • TODO: Virer `Application`
 • TODO: Remplacer tinyxml2 par Qt et virer le dossier /cmake
-• TODO: Virer la dépendance à la SFML pour le serveur
+• TODO: Virer la dépendance à la partie graphique de la SFML pour le serveur
    → Mettre la partie affichage dans une bibliothèque séparée inclue uniquement dans le client
    → Il sera probablement nécessaire de remplacer `sf::Vector2<T>` par ma classe `Vector2<T>`
 • TODO: Mettre le jeu dans une bibliothèque séparée (càd les Factory/Movement/Behaviour)
@@ -19,6 +19,7 @@ TODO
    → Alternative solution: Wait subentities are dead before killing main entity
 • DONE: Bullets appear on the top-left corner before being shooted, why?
 • TODO: During network lag spikes, entities are not correctly deleted/spawned
+   → Use TCP to send spawn/die events
 • TODO: Faster bullets when spamming shoot button instead of holding it, wtf?
 
 # Review
@@ -44,11 +45,11 @@ TODO
 
 # Game
 
-• TODO: Network
-   ◦ TODO: Server
+• WIP: Network
+   ◦ WIP: Server
+      ◦ DONE: Handle up to 4 players
       ◦ TODO: Handle multiple games at the same time (lobby system)
       ◦ TODO: Handle client crash (timeout)
-      ◦ TODO: Handle up to 4 players
 • WIP: Player spaceship implementation (blue, red, yellow, green)
    ◦ DONE: Add the ability to shoot
    ◦ DONE: Add network-based movement
